--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
 */
 .about{
     background-color: gray;
-    border-top: 3px solid  ;
+    border-top: 3px solid darkblue  ;
     position:fixed ;
     width: 600px;
     height: 60px;
